--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
-/* Sticky footer styles
--------------------------------------------------- */
 html {
   position: relative;
   min-height: 100%;
 }
 body {
-  /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
 
@@ -13,30 +10,35 @@ body {
   margin-top:80px;
   margin-bottom: 60px;
 }
+
+.leaflet-card{
+  max-width: 12em;
+  margin-bottom: 1em;
+}
+
+.leaflet-image{
+  width:100%;
+  margin-bottom: 1em;
+}
+
+.leaflet-card:hover{
+  color:purple;
+  border: 1px solid purple;
+}
+
+.note-color:hover{
+  color:purple;
+}
+
+.green-text{
+  color:green;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
   background-color: #f5f5f5;
-}
-
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-body > .container {
-  padding: 60px 15px 0;
-}
-
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
 }
